not allow users to edit isVersionOf and isReplacedBy from web interface

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -69,10 +69,10 @@
             </ul>
         {% endif %}
         {% if is_replaced_by %}
-             <div class="clear-fix"><i>This resource is obsoleted by <a href="{{ is_replaced_by }}">{{ is_replaced_by }}</a>.</i></div>
+             <div class="clear-fix"><i>A newer version of this resource <a href="{{ is_replaced_by }}">{{ is_replaced_by }}</a> is available that replaces this version.</i></div>
         {% endif %}
         {% if is_version_of %}
-            <div class="clear-fix"><i>This resource obsoletes <a href="{{ is_version_of }}">{{ is_version_of }}</a>.</i></div>
+            <div class="clear-fix"><i>An older version of this resource <a href="{{ is_version_of }}">{{ is_version_of }}</a> is available.</i></div>
         {% endif %}
     {% else %}
         <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
