--- a/theme/templates/resource-landing-page/content-tabs.html
+++ b/theme/templates/resource-landing-page/content-tabs.html
@@ -588,19 +588,21 @@
                                         <tr>
                                             <th scope="row" class="dataset-label">{{ relation.type }}:</th>
                                             <td class="dataset-details">{{ relation.value }}</td>
-                                            <td>
-                                                <a data-toggle="modal" data-placement="auto" title="Edit"
-                                                   class="glyphicon glyphicon-pencil icon-button btn-edit"
-                                                   data-target="#edit-relation-dialog_{{ relation.id }}"
-                                                   style="top: -5px; "></a>
-                                            </td>
-                                            <td>
-                                                <a data-toggle="modal" data-placement="auto"
-                                                   title="Remove"
-                                                   class="glyphicon glyphicon-trash icon-button btn-remove"
-                                                   data-target="#delete-relation-element-dialog{{ relation.id }}"
-                                                   style="top: -5px; right:20px;"></a>
-                                            </td>
+                                            {% if relation.type != "isVersionOf" and releation.type != "isReplacedBy" %}
+                                                <td>
+                                                    <a data-toggle="modal" data-placement="auto" title="Edit"
+                                                       class="glyphicon glyphicon-pencil icon-button btn-edit"
+                                                       data-target="#edit-relation-dialog_{{ relation.id }}"
+                                                       style="top: -5px; "></a>
+                                                </td>
+                                                <td>
+                                                    <a data-toggle="modal" data-placement="auto"
+                                                       title="Remove"
+                                                       class="glyphicon glyphicon-trash icon-button btn-remove"
+                                                       data-target="#delete-relation-element-dialog{{ relation.id }}"
+                                                       style="top: -5px; right:20px;"></a>
+                                                </td>
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
 
