--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -24,7 +24,7 @@
             {% if new_version_resource_creation_error %}
                 <div class="alert alert-danger alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Failed to Create a New Version Resource: {{ new_version_resource_creation_error }}</strong>
+                    <strong>Failed to create a new version of this resource: {{ new_version_resource_creation_error }}</strong>
                 </div>
             {% endif %}
         {% endblock %}
