--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1215,10 +1215,6 @@ a[data-toggle='tab']{
     clear: both;
 }
 
-.height-fix {
-    overflow: hidden;
-}
-
 #id_user-wrapper{
 	width: 60%;
 	padding: 1px;
@@ -1605,7 +1601,7 @@ div#sharing-status {
 }
 
 .info-group {
-	width: calc(100% - 140px);
+	width: calc(100% - 220px);
 }
 
 .tag-list {
@@ -2226,8 +2222,7 @@ button.loading {
 .profile-pic {
     width: 150px;
     height: 150px;
-    margin: auto;
-    margin-top: 20px;
+    margin-right: 30px;
 }
 
 .profile-pic:before {
@@ -2258,11 +2253,6 @@ button.loading {
 
 .profile-header {
     margin: 40px 0;
-}
-
-#exposeMask {
-    width: auto !important;
-    height: auto !important;
 }
 
 .round-image {
@@ -3150,23 +3140,4 @@ div.description.active {
 
 .availability-description {
     height:100px;
-}
-
-/* Profile edit page */
-.profile-picture-controls {
-    margin-top: 30px;
-}
-
-.profile-picture-controls a {
-    cursor: pointer;
-}
-
-.profile-picture-controls .btn {
-    margin-bottom: 20px;
-    width: 100%;
-}
-
-#icon-warning {
-    font-size: 40px;
-    color: #D9534F;
 }
