Undoing unwanted changes.

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2251,8 +2251,24 @@ button.loading {
     margin-bottom: 10px;
 }
 
+.profile-info-wrapper {
+    padding-top: 10px;
+}
+
 .profile-header {
     margin: 40px 0;
+}
+
+#btn-edit-profile {
+    border: 1px solid #adadad;
+    border-radius: 3px;
+    color: #428bca;
+}
+
+#btn-edit-profile:hover {
+    box-shadow: 0 0 5px #B2B2B2;
+    -moz-box-shadow: 0 0 5px #B2B2B2;
+    -webkit-box-shadow: 0 0 5px #B2B2B2;
 }
 
 .round-image {
