--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -3170,3 +3170,25 @@ div.description.active {
     font-size: 40px;
     color: #D9534F;
 }
+#group-profile-picture {
+    width: 100%;
+}
+
+#group-profile-picture .btn {
+    width: 50%;
+}
+
+#group-profile-picture .btn:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+#btn-save-profile {
+    margin-left: 10px;
+}
+
+#user-type-other {
+    display: none;
+}
+
+
