--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -9,8 +9,6 @@
         <form id="profile-form" action="{% url 'update_profile' %}" class="account-form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
-        <button type="submit">submit</button>
-
         <div class="row">
             <div data-page-mode="edit" class="alert alert-warning" role="alert">Information provided below will be public for all HydroShare users to see.</div>
 
@@ -20,13 +18,8 @@
                     {% if profile_user.id == user.id %}
                         <div class="col-xs-12 col-sm-3 height-fix pull-right">
                             <span data-page-mode="view" id="btn-edit-profile" class="glyphicon glyphicon-pencil pull-right icon-button btn-edit" title="Edit profile"></span>
-
-                            <span data-page-mode="edit" id="btn-save-profile" class="btn btn-primary"
-                                    style="float:right;margin:5px">Save changes
-                            </span>
-                            <span data-page-mode="edit" id="btn-cancel-profile-edit" class="btn btn-default"
-                                    style="float:right;margin:5px">Cancel
-                            </span>
+                            <button type="submit" data-page-mode="edit" id="btn-save-profile" class="btn btn-primary pull-right">Save changes</button>
+                            <button data-page-mode="edit" id="btn-cancel-profile-edit" class="btn btn-default pull-right">Cancel</button>
                         </div>
                     {% endif %}
                     <div class="col-sm-3" style="margin-bottom:20px;">
@@ -42,13 +35,15 @@
                             <div class="profile-picture-controls">
                             {% if profile.picture and profile.picture.url %}
                                 <label>Profile picture</label>
-                                <fieldset>
-                                    <span class="btn btn-default btn-file">Change<input type="file" name="picture"></span>
-                                </fieldset>
-                                <button class="btn btn-default">Remove</button>
+
+                                <div id="group-profile-picture" class="btn-group" role="group" aria-label="Profile picture">
+                                  <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-retweet"></span> Change<input type="file" name="picture"></span>
+                                  <button class="btn btn-default" id="picture-clear_id" name="picture-clear" value="clear"><span class="glyphicon glyphicon-trash"></span> Remove</button>
+                                </div>
+
                             {% else %}
                                 <fieldset>
-                                    <span class="btn btn-default btn-file">Add a photo<input type="file" name="picture"></span>
+                                    <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-trash"></span> Add a photo<input type="file" name="picture"></span>
                                 </fieldset>
                             {% endif %}
                                 {% if profile.cv and profile.cv.url %}
@@ -58,7 +53,7 @@
                                     </div>
                                     {% else %}
                                     <fieldset>
-                                        <span class="btn btn-default btn-file">Add a CV<input type="file" name="cv"></span>
+                                        <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-paperclip"></span>Add a CV<input type="file" name="cv"></span>
                                     </fieldset>
                                 {% endif %}
 
@@ -296,12 +291,12 @@
                                     <div data-page-mode="edit">
                                         <fieldset>
                                             <label>Description</label>
-                                            <textarea class="form-control" id="exampleTextarea"
+                                            <textarea class="form-control"
                                                       name="details" rows="4" >{% if profile.details %}{{ profile.details }}{% endif %}</textarea>
                                         </fieldset>
 
                                         <fieldset>
-                                            <label for="exampleSelect1">User type</label>
+                                            <label for="selectUserType">User type *</label>
                                             <select name="user_type" class="form-control" id="selectUserType">
                                                 <option value="Unspecified">Unspecified</option>
                                                 <option value="University Faculty">University Faculty</option>
@@ -315,6 +310,11 @@
                                                 <option value="School Teacher Kindergarten to 12th Grade">School Teacher Kindergarten to 12th Grade</option>
                                                 <option value="Other">Other</option>
                                             </select>
+                                        </fieldset>
+
+                                        <fieldset id="user-type-other">
+                                            <label>Specify: *</label>
+                                            <input name="user_type" class="form-control">
                                         </fieldset>
 
                                         <fieldset>
@@ -365,7 +365,7 @@
                                                     <tr>
                                                         <td><span class="text-muted">Email</span></td>
                                                         <td>
-                                                            <a href="mailto:{{ profile_user.email }}">send email to
+                                                            <a href="mailto:{{ profile_user.email }}" target="_blank">send email to
                                                                 {% if profile_user.first_name or profile_user.last_name %}
                                                                     {{ profile_user.first_name }}
                                                                     {{ profile_user.last_name }}
@@ -623,40 +623,27 @@
 {% block extra_js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-        function update_profile_ajax_submit() {
-            var form = $("#profile-form");
-            var datastring = form.serialize();
-            var url = form.attr('action');
-            var enctype = "multipart/form-data"
-
-            $.ajax({
-                type: "POST",
-                url: url,
-                dataType: 'html',
-                data: datastring,
-                enctype: enctype,
-                success: function (result) {
-                    if (result.status == "success") {
-                        setViewMode();
-                    }
-
-                    console.log(result);
-                },
-                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    console.log(errorThrown);
-                }
-            });
-            //don't submit the form
-            return false;
-        }
-
         function setEditMode() {
             $("[data-page-mode='view']").hide();
             $("[data-page-mode='edit']").fadeIn();
             $("[data-page-mode='on-edit-blur']").fadeTo("fast", 0.5, function () {
                 // Animation complete.
             });
-            $('#selectUserType option[value="' + $("#db-user-type").text() + '"]').attr('selected', 'selected');
+
+            var userTypeValue = $("#db-user-type").text();
+            var selectedUserType = $('#selectUserType option[value="' + userTypeValue + '"]');
+
+            if (selectedUserType.length > 0) {
+                selectedUserType.attr('selected', 'selected');
+            }
+            else if (userTypeValue) {
+                $('#selectUserType option[value="' + 'Other' + '"]').attr('selected', 'selected');
+                $("#user-type-other").show();
+                $("#selectUserType").removeAttr("name");
+                $("#user-type-other input").attr("name", "user-type");
+                 $("#user-type-other input").value(userTypeValue);
+            }
+
         }
 
         function setViewMode() {
@@ -667,76 +654,88 @@
             });
         }
 
-    $(document).ready(function () {
-        $('.phone').mask('(000) 000-0000');
+        $(document).ready(function () {
 
-        $("[data-page-mode='edit']").hide();
-        $("#btn-edit-profile").click(function(){
-            setEditMode();
+            $("#selectUserType").change(function () {
+                if ($(this).val() == "Other") {
+                    $("#user-type-other").show();
+                    $("#selectUserType").removeAttr("name");
+                    $("#user-type-other input").attr("name", "user-type")
+                }
+                else {
+                    $("#user-type-other").hide();
+                    $("#user-type-other input").removeAttr("name");
+                    $("#selectUserType").attr("name", "user-type");
+                }
+            });
+
+            $('.phone').mask('(000) 000-0000');
+
+            $("[data-page-mode='edit']").hide();
+            $("#btn-edit-profile").click(function () {
+                setEditMode();
+            });
+
+            $("#btn-cancel-profile-edit").click(function () {
+                setViewMode();
+            });
+
+            // Abstract collapse toggle
+            $(".show-more-btn").click(function () {
+                if ($(this).parent().find(".activity-description").css("max-height") == "50px") {
+                    var block = $(this).parent().find(".activity-description");
+
+                    block.css("max-height", "initial"); // Set max-height to initial temporarily.
+                    var maxHeight = block.height();    // Save the max height
+                    block.css("max-height", "50px");    // Restore
+
+                    block.animate({'max-height': maxHeight}, 300); // Animate to max height
+                    $(this).text("▲");
+                    $(this).attr("title", "Show less");
+                }
+                else {
+                    $(this).parent().find(".activity-description").animate({'max-height': "50px"}, 300);
+                    $(this).attr("title", "Show more");
+                    $(this).text("···");
+                }
+            });
+
+            // Filter list listener
+            $(".table-user-contributions tbody > tr").click(function () {
+                $(".table-user-contributions tbody > tr").removeClass("active");
+                $(this).addClass("active");
+                var res_type = $(this).attr("data-type");
+                if (res_type == "all") {
+                    $(".contribution").fadeIn();
+                }
+                else {
+                    $(".contribution").hide();
+                    $(".contribution[data-type='" + res_type + "']").fadeIn();
+                }
+            });
+
+            // Initialize filters
+            var collection = [];
+            collection["total"] = 0;
+
+            var rows = $(".contribution");
+            for (var i = 0; i < rows.length; i++) {
+                if (collection[$(rows[i]).attr("data-type")]) {
+                    collection[$(rows[i]).attr("data-type")]++;
+                }
+                else {
+                    collection[$(rows[i]).attr("data-type")] = 1;
+                }
+                collection["total"]++;
+            }
+
+            for (var item in collection) {
+                $("tr[data-type='" + item + "']").find(".badge").text(collection[item]);
+            }
+
+            $("tr[data-type='all']").find(".badge").text(collection["total"]);
+
         });
-
-        $("#btn-cancel-profile-edit").click(function(){
-            setViewMode();
-        });
-
-        $("#btn-save-profile").click(update_profile_ajax_submit);
-
-        // Abstract collapse toggle
-        $(".show-more-btn").click(function () {
-            if ($(this).parent().find(".activity-description").css("max-height") == "50px") {
-                var block = $(this).parent().find(".activity-description");
-
-                block.css("max-height", "initial"); // Set max-height to initial temporarily.
-                var maxHeight = block.height();    // Save the max height
-                block.css("max-height", "50px");    // Restore
-
-                block.animate({'max-height': maxHeight}, 300); // Animate to max height
-                $(this).text("▲");
-                $(this).attr("title", "Show less");
-            }
-            else {
-                $(this).parent().find(".activity-description").animate({'max-height': "50px"}, 300);
-                $(this).attr("title", "Show more");
-                $(this).text("···");
-            }
-        });
-
-        // Filter list listener
-        $(".table-user-contributions tbody > tr").click(function(){
-            $(".table-user-contributions tbody > tr").removeClass("active");
-            $(this).addClass("active");
-            var res_type = $(this).attr("data-type");
-            if (res_type == "all") {
-                $(".contribution").fadeIn();
-            }
-            else {
-                $(".contribution").hide();
-                $(".contribution[data-type='" + res_type + "']").fadeIn();
-            }
-        });
-
-        // Initialize filters
-        var collection = [];
-        collection["total"] = 0;
-
-        var rows = $(".contribution");
-        for (var i = 0; i < rows.length; i++) {
-            if (collection[$(rows[i]).attr("data-type")]) {
-                collection[$(rows[i]).attr("data-type")]++;
-            }
-            else {
-                collection[$(rows[i]).attr("data-type")] = 1;
-            }
-            collection["total"]++;
-        }
-
-        for (var item in collection) {
-            $("tr[data-type='" + item + "']").find(".badge").text(collection[item]);
-        }
-
-        $("tr[data-type='all']").find(".badge").text(collection["total"]);
-
-    });
     </script>
 {% endblock %}
 
