--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -6,11 +6,14 @@
 {% block main %}
 
     {% with profile_user.userprofile as profile %}
+        {% if profile_user.id == user.id %}
         <form id="profile-form" action="{% url 'update_profile' %}" class="account-form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-
+        {% endif %}
         <div class="row">
+            {% if profile_user.id == user.id %}
             <div data-page-mode="edit" class="alert alert-warning" role="alert">Information provided below will be public for all HydroShare users to see.</div>
+            {% endif %}
 
             <div class="col-sm-12">
                 {#        Profile picture       #}
@@ -19,7 +22,7 @@
                         <div class="col-xs-12 col-sm-3 height-fix pull-right">
                             <span data-page-mode="view" id="btn-edit-profile" class="glyphicon glyphicon-pencil pull-right icon-button btn-edit" title="Edit profile"></span>
                             <button type="submit" data-page-mode="edit" id="btn-save-profile" class="btn btn-primary pull-right">Save changes</button>
-                            <button data-page-mode="edit" id="btn-cancel-profile-edit" class="btn btn-default pull-right">Cancel</button>
+                            <span data-page-mode="edit" id="btn-cancel-profile-edit" class="btn btn-default pull-right">Cancel</span>
                         </div>
                     {% endif %}
                     <div class="col-sm-3" style="margin-bottom:20px;">
@@ -31,19 +34,20 @@
                             <div class="profile-pic round-image user-icon"></div>
                         {% endif %}
 
+                        {% if profile_user.id == user.id %}
                         <div data-page-mode="edit">
                             <div class="profile-picture-controls">
                             {% if profile.picture and profile.picture.url %}
                                 <label>Profile picture</label>
-
                                 <div id="group-profile-picture" class="btn-group" role="group" aria-label="Profile picture">
                                   <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-retweet"></span> Change<input type="file" name="picture"></span>
                                   <button class="btn btn-default" id="picture-clear_id" name="picture-clear" value="clear"><span class="glyphicon glyphicon-trash"></span> Remove</button>
                                 </div>
 
                             {% else %}
+                                <label>Profile picture</label>
                                 <fieldset>
-                                    <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-trash"></span> Add a photo<input type="file" name="picture"></span>
+                                    <span class="btn btn-default btn-file"><span class="glyphicon glyphicon-picture"></span> Add a photo<input type="file" name="picture"></span>
                                 </fieldset>
                             {% endif %}
                                 {% if profile.cv and profile.cv.url %}
@@ -79,6 +83,7 @@
                                 <div><a data-toggle="modal" data-target="#deactivate-account-dialog">Deactivate account</a></div>
                             </div>
                         </div>
+                        {% endif %}
                     </div>
 
                     <div class="col-xs-12 col-sm-6">
@@ -117,6 +122,7 @@
                                 </table>
                             {% endif %}
                         </div>
+                        {% if profile_user.id == user.id %}
                         <div data-page-mode="edit">
                             <div class="row">
                                 {# First name #}
@@ -178,6 +184,7 @@
                                 </fieldset>
                             </div>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -288,6 +295,7 @@
                                         </table>
                                     </div>
 
+                                    {% if profile_user.id == user.id %}
                                     <div data-page-mode="edit">
                                         <fieldset>
                                             <label>Description</label>
@@ -332,6 +340,7 @@
                                             <input name="date_joined" readonly class="form-control" value="01/28/2016">
                                         </fieldset>
                                     </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% endif %}
@@ -392,6 +401,7 @@
                                             </tbody>
                                         </table>
 
+                                        {% if profile_user.id == user.id %}
                                         <div class="row" data-page-mode="edit">
                                             <fieldset>
                                                 <div class="col-sm-12"><label>Phone 1</label></div>
@@ -446,6 +456,7 @@
                                                        value="{{ profile_user.website }}" name="website">
                                             </fieldset>
                                         </div>
+                                        {% endif %}
                                 </div>
                             </div>
                             {% endif %}
@@ -641,7 +652,7 @@
                 $("#user-type-other").show();
                 $("#selectUserType").removeAttr("name");
                 $("#user-type-other input").attr("name", "user_type");
-                 $("#user-type-other input").value(userTypeValue);
+                 $("#user-type-other input").val(userTypeValue);
             }
         }
 
